whitespace fix

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1 {
 .byline {
   text-align: center;
   color: #555;
-  margin-bottom: 40px;
+  margin-bottom: 6px;
 }
 
 /* Container styling for charts */
